{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 779,
  "lineage": "051abd89-614c-c927-0440-b18651477a6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "iac_instance_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f22fd89a99bdc82c",
            "domain": "vpc",
            "id": "eipalloc-05937c2a8f26541ce",
            "instance": "i-0bca5761626f8f36e",
            "network_interface": "eni-0db1d23153f9ea8be",
            "private_dns": "ip-192-168-104-104.ec2.internal",
            "private_ip": "192.168.104.104",
            "public_dns": "ec2-52-44-34-238.compute-1.amazonaws.com",
            "public_ip": "52.44.34.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iac_instance_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.iac_instance_profile",
            "aws_iam_role.iac_instance_role",
            "aws_instance.iac_instance",
            "aws_internet_gateway.iac_igw",
            "aws_network_interface.iac_instance_if",
            "aws_security_group.iac_sg_instance",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "iac_nat_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-029080ca34c2fa554",
            "public_dns": "ec2-35-170-95-182.compute-1.amazonaws.com",
            "public_ip": "35.170.95.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iac_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:227389759256:instance/i-0bca5761626f8f36e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "iac_instance_profile",
            "id": "i-0bca5761626f8f36e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zhang-key-pair-st2",
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0db1d23153f9ea8be"
              }
            ],
            "primary_network_interface_id": "eni-0db1d23153f9ea8be",
            "private_dns": "ip-192-168-104-104.ec2.internal",
            "private_ip": "192.168.104.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08a8aa187b08d382c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be916f55ae1d0c73",
            "tags": {
              "Name": "iac-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f63ed3d1f2724791"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.iac_instance_profile",
            "aws_iam_role.iac_instance_role",
            "aws_internet_gateway.iac_igw",
            "aws_network_interface.iac_instance_if",
            "aws_security_group.iac_sg_instance",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iac_work_node_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:227389759256:instance/i-0f5ba32cd9711d3b8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "iac-worknodes-profile",
            "id": "i-0f5ba32cd9711d3b8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zhang-key-pair-st2",
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0cafcc9de92b9bf26"
              }
            ],
            "primary_network_interface_id": "eni-0cafcc9de92b9bf26",
            "private_dns": "ip-192-168-101-101.ec2.internal",
            "private_ip": "192.168.101.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06a48f76c64a78566",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077d775f6aa9aefaa",
            "tags": {
              "Name": "iac-work-node-a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04303b231bd554531"
            ]
          },
          "dependencies": [
            "aws_eip.iac_nat_ip",
            "aws_iam_instance_profile.iac_worknodes_profile",
            "aws_iam_role.iac_worknodes_role",
            "aws_internet_gateway.iac_igw",
            "aws_nat_gateway.iac_nat",
            "aws_network_interface.iac_worknode_a_if",
            "aws_security_group.iac_sg_worknode",
            "aws_subnet.iac_vpc_subnet_01",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iac_work_node_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:227389759256:instance/i-0cff7eb88ad1df0f7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "iac-worknodes-profile",
            "id": "i-0cff7eb88ad1df0f7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zhang-key-pair-st2",
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-04ea224544c886b7c"
              }
            ],
            "primary_network_interface_id": "eni-04ea224544c886b7c",
            "private_dns": "ip-192-168-102-102.ec2.internal",
            "private_ip": "192.168.102.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09bd008cb5202db94",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c0570388515d808",
            "tags": {
              "Name": "iac-work-node-b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04303b231bd554531"
            ]
          },
          "dependencies": [
            "aws_eip.iac_nat_ip",
            "aws_iam_instance_profile.iac_worknodes_profile",
            "aws_iam_role.iac_worknodes_role",
            "aws_internet_gateway.iac_igw",
            "aws_nat_gateway.iac_nat",
            "aws_network_interface.iac_worknode_b_if",
            "aws_security_group.iac_sg_worknode",
            "aws_subnet.iac_vpc_subnet_02",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iac_work_node_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:227389759256:instance/i-0187b54d61b8ef106",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "iac-worknodes-profile",
            "id": "i-0187b54d61b8ef106",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zhang-key-pair-st2",
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0b74b0b111dbea130"
              }
            ],
            "primary_network_interface_id": "eni-0b74b0b111dbea130",
            "private_dns": "ip-192-168-103-103.ec2.internal",
            "private_ip": "192.168.103.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f9c7771d206ede7e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089b1b79753e65db3",
            "tags": {
              "Name": "iac-work-node-c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04303b231bd554531"
            ]
          },
          "dependencies": [
            "aws_eip.iac_nat_ip",
            "aws_iam_instance_profile.iac_worknodes_profile",
            "aws_iam_role.iac_worknodes_role",
            "aws_internet_gateway.iac_igw",
            "aws_nat_gateway.iac_nat",
            "aws_network_interface.iac_worknode_c_if",
            "aws_security_group.iac_sg_worknode",
            "aws_subnet.iac_vpc_subnet_03",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iac_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07a8f1f874f46f2c5",
            "owner_id": "227389759256",
            "tags": {
              "Name": "iac-internet-gateway"
            },
            "vpc_id": "vpc-00f850748d4126b5c"
          },
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "iac_main_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c88016ce03299c0",
            "original_route_table_id": "rtb-0561c108b4eac7726",
            "route_table_id": "rtb-0745df21a9c6397f0",
            "vpc_id": "vpc-00f850748d4126b5c"
          },
          "dependencies": [
            "aws_eip.iac_nat_ip",
            "aws_internet_gateway.iac_igw",
            "aws_nat_gateway.iac_nat",
            "aws_route_table.iac_rt",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "iac_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029080ca34c2fa554",
            "id": "nat-085b71133ee00b02a",
            "network_interface_id": "eni-05a19613ea344a9a1",
            "private_ip": "192.168.104.239",
            "public_ip": "35.170.95.182",
            "subnet_id": "subnet-0be916f55ae1d0c73",
            "tags": {
              "Name": "iac_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.iac_nat_ip",
            "aws_internet_gateway.iac_igw",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "iac_instance_if",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0db1d23153f9ea8be",
            "mac_address": "12:9d:6f:a3:8a:8d",
            "private_dns_name": "ip-192-168-104-104.ec2.internal",
            "private_ip": "192.168.104.104",
            "private_ips": [
              "192.168.104.104"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f63ed3d1f2724791"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be916f55ae1d0c73",
            "tags": {
              "Name": "iac_instance_if"
            }
          },
          "dependencies": [
            "aws_security_group.iac_sg_instance",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "iac_worknode_a_if",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0cafcc9de92b9bf26",
            "mac_address": "12:52:c4:4e:86:0f",
            "private_dns_name": "ip-192-168-101-101.ec2.internal",
            "private_ip": "192.168.101.101",
            "private_ips": [
              "192.168.101.101"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04303b231bd554531"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077d775f6aa9aefaa",
            "tags": {
              "Name": "iac_worknode_a_if"
            }
          },
          "dependencies": [
            "aws_security_group.iac_sg_worknode",
            "aws_subnet.iac_vpc_subnet_01",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "iac_worknode_b_if",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-04ea224544c886b7c",
            "mac_address": "12:5a:67:26:e2:f7",
            "private_dns_name": "ip-192-168-102-102.ec2.internal",
            "private_ip": "192.168.102.102",
            "private_ips": [
              "192.168.102.102"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04303b231bd554531"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c0570388515d808",
            "tags": {
              "Name": "iac_worknode_b_if"
            }
          },
          "dependencies": [
            "aws_security_group.iac_sg_worknode",
            "aws_subnet.iac_vpc_subnet_02",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "iac_worknode_c_if",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0b74b0b111dbea130",
            "mac_address": "12:12:7c:ab:52:dd",
            "private_dns_name": "ip-192-168-103-103.ec2.internal",
            "private_ip": "192.168.103.103",
            "private_ips": [
              "192.168.103.103"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04303b231bd554531"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089b1b79753e65db3",
            "tags": {
              "Name": "iac_worknode_c_if"
            }
          },
          "dependencies": [
            "aws_security_group.iac_sg_worknode",
            "aws_subnet.iac_vpc_subnet_03",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "iac_igw_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0327a9bd85039e7b9",
            "owner_id": "227389759256",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a8f1f874f46f2c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac-igw-custom-route-table"
            },
            "vpc_id": "vpc-00f850748d4126b5c"
          },
          "dependencies": [
            "aws_internet_gateway.iac_igw",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "iac_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0745df21a9c6397f0",
            "owner_id": "227389759256",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-085b71133ee00b02a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac-nat-main-route-table"
            },
            "vpc_id": "vpc-00f850748d4126b5c"
          },
          "dependencies": [
            "aws_eip.iac_nat_ip",
            "aws_internet_gateway.iac_igw",
            "aws_nat_gateway.iac_nat",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "iac_igw_rt_association_04",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb23e13bc825b661",
            "route_table_id": "rtb-0327a9bd85039e7b9",
            "subnet_id": "subnet-0be916f55ae1d0c73"
          },
          "dependencies": [
            "aws_internet_gateway.iac_igw",
            "aws_route_table.iac_igw_rt",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "iac_rt_association_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f1528a97077b7fd",
            "route_table_id": "rtb-0745df21a9c6397f0",
            "subnet_id": "subnet-077d775f6aa9aefaa"
          },
          "dependencies": [
            "aws_eip.iac_nat_ip",
            "aws_internet_gateway.iac_igw",
            "aws_nat_gateway.iac_nat",
            "aws_route_table.iac_rt",
            "aws_subnet.iac_vpc_subnet_01",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "iac_rt_association_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ccfb712622bd87b",
            "route_table_id": "rtb-0745df21a9c6397f0",
            "subnet_id": "subnet-08c0570388515d808"
          },
          "dependencies": [
            "aws_eip.iac_nat_ip",
            "aws_internet_gateway.iac_igw",
            "aws_nat_gateway.iac_nat",
            "aws_route_table.iac_rt",
            "aws_subnet.iac_vpc_subnet_02",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "iac_rt_association_03",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c5babb1718a85b4",
            "route_table_id": "rtb-0745df21a9c6397f0",
            "subnet_id": "subnet-089b1b79753e65db3"
          },
          "dependencies": [
            "aws_eip.iac_nat_ip",
            "aws_internet_gateway.iac_igw",
            "aws_nat_gateway.iac_nat",
            "aws_route_table.iac_rt",
            "aws_subnet.iac_vpc_subnet_03",
            "aws_subnet.iac_vpc_subnet_04",
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "iac_sg_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227389759256:security-group/sg-0f63ed3d1f2724791",
            "description": " security for public instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f63ed3d1f2724791",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "iac-security-group-for-instance",
            "name_prefix": null,
            "owner_id": "227389759256",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac_sg_instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f850748d4126b5c"
          },
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "iac_sg_worknode",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227389759256:security-group/sg-04303b231bd554531",
            "description": "security for work nodes inside nat",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04303b231bd554531",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "iac-sg-worknode",
            "name_prefix": null,
            "owner_id": "227389759256",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac-sg-worknode"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f850748d4126b5c"
          },
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iac_vpc_subnet_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227389759256:subnet/subnet-077d775f6aa9aefaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.101.0/24",
            "id": "subnet-077d775f6aa9aefaa",
            "map_public_ip_on_launch": false,
            "owner_id": "227389759256",
            "tags": {
              "Name": "iac-eks-vpc-subnet01"
            },
            "vpc_id": "vpc-00f850748d4126b5c"
          },
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iac_vpc_subnet_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227389759256:subnet/subnet-08c0570388515d808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.102.0/24",
            "id": "subnet-08c0570388515d808",
            "map_public_ip_on_launch": false,
            "owner_id": "227389759256",
            "tags": {
              "Name": "iac-eks-vpc-subnet02"
            },
            "vpc_id": "vpc-00f850748d4126b5c"
          },
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iac_vpc_subnet_03",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227389759256:subnet/subnet-089b1b79753e65db3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.103.0/24",
            "id": "subnet-089b1b79753e65db3",
            "map_public_ip_on_launch": false,
            "owner_id": "227389759256",
            "tags": {
              "Name": "iac-eks-vpc-subnet03"
            },
            "vpc_id": "vpc-00f850748d4126b5c"
          },
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iac_vpc_subnet_04",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227389759256:subnet/subnet-0be916f55ae1d0c73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.104.0/24",
            "id": "subnet-0be916f55ae1d0c73",
            "map_public_ip_on_launch": false,
            "owner_id": "227389759256",
            "tags": {
              "Name": "iac-eks-vpc-subnet04"
            },
            "vpc_id": "vpc-00f850748d4126b5c"
          },
          "dependencies": [
            "aws_vpc.iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iac_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227389759256:vpc/vpc-00f850748d4126b5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0444b42b336d7af04",
            "default_route_table_id": "rtb-0561c108b4eac7726",
            "default_security_group_id": "sg-0560e719f1ac098ba",
            "dhcp_options_id": "dopt-0f2915db78ea09f86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00f850748d4126b5c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0561c108b4eac7726",
            "owner_id": "227389759256",
            "tags": {
              "Name": "iac-vpc"
            }
          }
        }
      ]
    }
  ]
}